kubernetes/archive/deploy/linkwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: linkwarden
      release: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
        release: linkwarden
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        # --- General ---
        - image: ghcr.io/linkwarden/linkwarden:latest
          imagePullPolicy: Always
          name: linkwarden
          # ---------------

          # --- Environment ---
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          # ---------------

          # --- Probes ---
          readinessProbe:
            failureThreshold: 6
            successThreshold: 1
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 5
            httpGet:
              scheme: HTTP
              port: 3000
              path: /
          livenessProbe:
            failureThreshold: 6
            successThreshold: 1
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 5
            tcpSocket:
              port: 3000
          # ---------------

          # --- Mounts ---
          volumeMounts:
            - mountPath: /data/data
              name: linkwarden
          # ---------------
      volumes:
        - name: linkwarden
          persistentVolumeClaim:
            claimName: linkwarden-data
