kubernetes/archive/deploy/linkwarden/deployment_meili.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden-meili
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: linkwarden-meili
      release: linkwarden-meili
  template:
    metadata:
      labels:
        app: linkwarden-meili
        release: linkwarden-meili
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        # --- General ---
        - image: getmeili/meilisearch:v1.12.8
          imagePullPolicy: Always
          name: linkwarden-meili
          # ---------------

          # --- Environment ---
          ports:
            - containerPort: 7700
              name: http
              protocol: TCP
          # ---------------

          # --- Mounts ---
          volumeMounts:
            - mountPath: meili_data
              name: meili-data
          # ---------------
      volumes:
        - name: meili-data
          persistentVolumeClaim:
            claimName: meili-data
