kubernetes/archive/deploy/linkwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: linkwarden
spec:
  rules:
  - host: bookmarks.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: linkwarden
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
